--- a/docker/services/frontend/html/service-watchdog.html
+++ b/docker/services/frontend/html/service-watchdog.html
@@ -483,6 +483,21 @@
                         <td><span class="alert-level high">High</span></td>
                     </tr>
                     <tr>
+                        <td>Candlestick Service</td>
+                        <td><code>trading-candlestick:3006</code></td>
+                        <td><span class="alert-level medium">Medium</span></td>
+                    </tr>
+                    <tr>
+                        <td>CNN-LSTM Service</td>
+                        <td><code>trading-cnn-lstm:3007</code></td>
+                        <td><span class="alert-level high">High</span></td>
+                    </tr>
+                    <tr>
+                        <td>Trading Workplace</td>
+                        <td><code>trading-workplace:3020</code></td>
+                        <td><span class="alert-level high">High</span></td>
+                    </tr>
+                    <tr>
                         <td>EasyInsight API</td>
                         <td><code>10.1.19.102:3000</code></td>
                         <td><span class="alert-level critical">Critical</span></td>
