--- a/docker/services/frontend/html/kanban.html
+++ b/docker/services/frontend/html/kanban.html
@@ -55,19 +55,17 @@
         }
 
         .back-link {
-            color: #64c8ff;
-            text-decoration: none;
-            display: flex;
+            display: inline-flex;
             align-items: center;
             gap: 0.5rem;
-            padding: 0.5rem 1rem;
-            background: rgba(100, 200, 255, 0.1);
-            border-radius: 8px;
+            color: #64c8ff;
+            text-decoration: none;
+            font-size: 0.9rem;
             transition: all 0.2s;
         }
 
         .back-link:hover {
-            background: rgba(100, 200, 255, 0.2);
+            color: #fff;
         }
 
         /* Toolbar */
