feat: Add Prediction Feedback and History Services
- Implemented PredictionFeedbackService to manage user feedback on CNN-LSTM predictions, including submission, retrieval, revalidation, and statistics.
- Introduced PredictionHistoryService to store and manage CNN-LSTM predictions for validation and backtesting, with features for adding predictions, scanning for new predictions, and retrieving historical data.
- Both services include comprehensive logging and error handling for robust operation.

--- a/docker/services/frontend/html/data-validation.html
+++ b/docker/services/frontend/html/data-validation.html
@@ -795,7 +795,7 @@
 <body>
     <header>
         <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
-            <a href="/" class="back-link">&#8592; Dashboard</a>
+            <a href="/" class="back-link">← Dashboard</a>
             <h1>&#128202; Daten-Validierung</h1>
             <div class="header-actions"></div>
         </div>
